# learn-pp-rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Untitled.ipynb  build.sh  plot_result.ipynb  run.sh
examples/: example2.rs  example3.rs  test.rs  test_broadcast.rs  test_ltrs.rs  test_rand.rs
learn-slam/: Cargo.toml
learn-slam/src/: lib.rs
learn-tch-rs/: Cargo.toml  create_moons_csv.py  moon.csv  tch-rs-operations.ipynb  test_log_prob.ipynb
learn-tch-rs/examples/: batch_mahalanobis.rs  learn_ndarray.rs  learn_shape.rs  mvnormal_grad.rs  normal.rs  sinkhorn.rs
learn-tch-rs/src/: lib.rs  multivariate_normal.rs  plotly_evcxr.rs
src/: lib.rs  utils.rs
workspace/hello_world/examples/: example1.rs  example3.rs  test_minibatch.rs
workspace/hello_world/src/: lib.rs  main.rs
