[package]
name = "hello_world"
version = "0.1.0"
authors = ["Taku Yoshioka <taku.yoshioka.4096@gmail.com>"]

[dependencies]
rand = "0.5.4"
primitiv = { version = "0.3.0", path = "/root/primitiv-rust" }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"

[[example]]
name = "example1"

[[example]]
name = "example2"

[[example]]
name = "example3"

[[example]]
name = "test"

[[example]]
name = "test_broadcast"

[[example]]
name = "test_rand"

[[example]]
name = "test_minibatch"

[[example]]
name = "test_ltrs"